IE needs more work. This fixes horizontal top right non after spacing issue

--- a/scss/cool-borders.scss
+++ b/scss/cool-borders.scss
@@ -28,7 +28,9 @@
   background-image: linear-gradient(90deg, $secondary-color, $primary-color);
   border-right: $border-width solid $primary-color;
   background-size: 100% $border-width;
+  background-position: 1px 0;
   &::after {
+    content: "";
     bottom: 0;
     right: 0;
     height: $border-width;
